Added functionality and navigation for cropping photos

--- a/PageSelectPhoto.xaml
+++ b/PageSelectPhoto.xaml
@@ -12,7 +12,8 @@
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait"  Orientation="Portrait"
-    shell:SystemTray.IsVisible="True">
+    shell:SystemTray.IsVisible="True"
+    Loaded="OcrPivotPage_Load">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
@@ -22,26 +23,24 @@
             <phone:PivotItem Header="Select photo..">
                 <!--ContentPanel - place additional content here-->
                 <Grid x:Name="PhotosContentPanel" Grid.Row="1" Margin="12,0,12,0">
-                    <ListBox x:Name="ListBoxPhotos">
-                        <toolkit:ListPicker x:Name="ListPickerPhotos" Margin="0">
-                            <toolkit:ListPicker.ItemTemplate>
-                                <DataTemplate>
-                                    <Canvas x:Name="CanvasPhotos" Width="320" Height="240" Loaded="OcrPivotPage_Load">
-                                        <!--Image for the camera capture.-->
-                                        <Image Width="320" Height="240" Stretch="Uniform" HorizontalAlignment="Left" VerticalAlignment="Top" Source="{Binding Photo}"/>
+                    <toolkit:ListPicker x:Name="ListPickerPhotos" Margin="0">
+                        <toolkit:ListPicker.ItemTemplate>
+                            <DataTemplate>
+                                <Canvas x:Name="CanvasPhotos" Width="320" Height="240">
+                                    <!--Image for the camera capture.-->
+                                    <Image Width="320" Height="240" Stretch="Uniform" HorizontalAlignment="Left" VerticalAlignment="Top" Source="{Binding Photo}"/>
 
-                                        <!--TextBlock for status messages. -->
-                                        <TextBlock Canvas.Left="8" Canvas.Top="245" Height="69" x:Name="textStatus" Text="{Binding CapturedDateTime}" Width="440" />
-                                    </Canvas>
-                                </DataTemplate>
-                            </toolkit:ListPicker.ItemTemplate>
-                        </toolkit:ListPicker>   
-                    </ListBox>
+                                    <!--TextBlock for status messages. -->
+                                    <TextBlock Canvas.Left="8" Canvas.Top="245" Height="69" x:Name="textStatus" Text="{Binding CapturedDateTime}" Width="440" />
+                                </Canvas>
+                            </DataTemplate>
+                        </toolkit:ListPicker.ItemTemplate>
+                    </toolkit:ListPicker>   
 
-                    <Canvas x:Name="CanvasNewPhoto" Width="320" Height="240">
-                        <Button x:Name="ButtonNewPhoto" Click="ButtonNewPhoto_Click" Background="{x:Null}" Foreground="{x:Null}" BorderBrush="{x:Null}">
+                    <Canvas x:Name="CanvasContinue" Width="320" Height="240">
+                        <Button x:Name="ButtonSelectPhoto" Click="ButtonSelectPhoto_Click" Background="{x:Null}" Foreground="{x:Null}" BorderBrush="{x:Null}">
                             <!--Image for adding photo -->
-                            <Image x:Name="MainImage" Stretch="Uniform" HorizontalAlignment="Left" VerticalAlignment="Top" Source="Assets/ModernUI/appbar.add.png"/>
+                            <Image x:Name="ImageSelectPhoto" Stretch="Uniform" HorizontalAlignment="Left" VerticalAlignment="Top" Source="Assets/ModernUI/appbar.arrow.right.png"/>
                         </Button>
                     </Canvas>
                 </Grid>
