--- a/App.xaml
+++ b/App.xaml
@@ -7,6 +7,11 @@
 
     <!--Application Resources-->
     <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources\Styles.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
@@ -17,3 +22,5 @@
     </Application.ApplicationLifetimeObjects>
 
 </Application>
+    
+    
