--- a/PageAddContent.xaml
+++ b/PageAddContent.xaml
@@ -6,6 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
+    xmlns:Models="clr-namespace:ReciCam.Windows.Phone.Models"
     x:Class="ReciCam.Windows.Phone.PageAddContent"
     mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
@@ -15,67 +16,81 @@
     shell:SystemTray.IsVisible="True" Loaded="PageAddContent_OnLoad">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
-        <!--Pivot Control-->
-        <phone:Pivot Title="ReciCam">
-            <!--Pivot item one-->
-            <phone:PivotItem Header="Photos" >
-                <Grid x:Name="PhotosContentGrid">
+	<Grid x:Name="LayoutRoot" Background="Transparent">
+		<!--Pivot Control-->
+		<phone:Pivot Title="ReciCam">
+			<!--Pivot item one-->
+			<phone:PivotItem Header="Photos" >
+				<Grid x:Name="PhotosContentGrid" Margin="0,0,0,2">
 
-                    <!--Show images captured here-->
-                    <!--ContentPanel - place additional content here-->
-                    <Grid x:Name="PhotosContentPanel" Grid.Row="0" Margin="12,0,12,0">
-                        <toolkit:ListPicker x:Name="ListBoxPhotos" BorderBrush="{x:Null}">
-                            <toolkit:ListPicker.ItemTemplate>
-                                <DataTemplate>
-                                    <Grid ShowGridLines="False">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="auto" />
-                                            <RowDefinition />
-                                            <RowDefinition Height="auto" />
-                                        </Grid.RowDefinitions>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*" />
-                                            <ColumnDefinition Width="*" />
-                                        </Grid.ColumnDefinitions>
-                                        <!--Image for the camera capture.-->
-                                        <Image Grid.Column="0" Width="160" Height="160" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Top" Source="{Binding Photo}"/>
+					<Grid x:Name="PhotosContentPanel" Margin="0,0,48,0" ShowGridLines="True" VerticalAlignment="Top">
+						<Grid.RowDefinitions>
+							<RowDefinition Height="Auto"/>
+							<RowDefinition Height="Auto"/>
+						</Grid.RowDefinitions>
+						<Button x:Name="ButtonAddTitle" HorizontalAlignment="Center" Margin="309,12,0,595" Width="50" Height="50" RenderTransformOrigin="-0.48,1.12" Grid.Column="4" VerticalAlignment="Top">
+							<Button.Foreground>
+								<ImageBrush Stretch="None" ImageSource="/Assets/ModernUI/appbar.add.png"/>
+							</Button.Foreground>
+							<Button.Background>
+								<ImageBrush Stretch="None" ImageSource="/Assets/ModernUI/appbar.base.png"/>
+							</Button.Background>
+						</Button>
+						<TextBox x:Name="TextBoxAddTitle" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Width="324" Background="{StaticResource PhoneTextBoxBrush}" BorderBrush="{StaticResource PhoneTextBoxEditBorderBrush}">
+							<TextBox.DataContext>
+								<Models:RecipeBaseTitle/>
+							</TextBox.DataContext>
+						</TextBox>
+					</Grid>
+					<Grid x:Name="PhotosAddedPanel" Margin="0,0,48,0" ShowGridLines="True" VerticalAlignment="Top" Grid.Row="1">
+						<StackPanel>
 
-                                        <StackPanel Grid.Column="1" Margin="20">
-                                            <HyperlinkButton Click="ButtonAddTitle_Click" HorizontalAlignment="Left" FontSize="24">Add title..</HyperlinkButton>
-                                            <TextBlock HorizontalAlignment="Left" Style="{StaticResource PhoneTextNormalStyle}">
-							                    <Run FontSize="12" Text="Find title in photo" />
-                                            </TextBlock>
+							<Image x:Name="ImageTitle" Width="160" Height="160" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Top" Source="{Binding RecipePhoto}"/>
+
+							<ListBox x:Name="ListBoxAddedPhotos" Grid.Column="0">
+								<ListBox.ItemTemplate>
+									<DataTemplate>
+										<Image Width="160" Height="160" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Top" Source="{Binding RecipePhoto}"/>
+									</DataTemplate>
+								</ListBox.ItemTemplate>
+							</ListBox>
+						</StackPanel>
+						<toolkit:ListPicker x:Name="ListBoxPhotos" BorderBrush="{x:Null}" Margin="12,12,12,-485">
+							<toolkit:ListPicker.ItemTemplate>
+								<DataTemplate>
+									<Grid ShowGridLines="False">
+										<Grid.RowDefinitions>
+											<RowDefinition Height="auto" />
+											<RowDefinition />
+											<RowDefinition Height="auto" />
+										</Grid.RowDefinitions>
+										<Grid.ColumnDefinitions>
+											<ColumnDefinition Width="*" />
+											<ColumnDefinition Width="*" />
+										</Grid.ColumnDefinitions>
+										<!--Image for the camera capture.-->
+										<Image Grid.Column="0" Width="160" Height="160" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Top" Source="{Binding Photo}"/>
+
+										<StackPanel Grid.Column="1" Margin="20">
+											<HyperlinkButton Click="ButtonAddTitle_Click" HorizontalAlignment="Left" FontSize="24" Content="Add title.."/>
+											<TextBlock HorizontalAlignment="Left" Style="{StaticResource PhoneTextNormalStyle}">
+												<Run FontSize="12" Text="Find title in photo" />
+											</TextBlock>
                                             
                                             <!--TextBlock for status messages. -->
-                                            <TextBlock FontSize="12" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Left" Height="69" x:Name="textStatus" Text="{Binding CapturedDateTime}" />
-                                        </StackPanel>
-                                    </Grid>
-                                </DataTemplate>
-                            </toolkit:ListPicker.ItemTemplate>
-                        </toolkit:ListPicker>
-                    </Grid>
-                    
-                    <Grid x:Name="PhotosAddedPanel" Grid.Row="1">
-                        <StackPanel>
-                            <TextBlock Text="photos added.."></TextBlock>
+											<TextBlock FontSize="12" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Left" Height="69" x:Name="textStatus" Text="{Binding CapturedDateTime}" />
+										</StackPanel>
+									</Grid>
+								</DataTemplate>
+							</toolkit:ListPicker.ItemTemplate>
+						</toolkit:ListPicker>
+					</Grid>
+					<!--Show images captured here-->
 
-                            <Image x:Name="ImageTitle" Width="160" Height="160" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Top" Source="{Binding RecipePhoto}"/>
+				</Grid>
+			</phone:PivotItem>
 
-                            <ListBox x:Name="ListBoxAddedPhotos" Grid.Column="0">
-                                <ListBox.ItemTemplate>
-                                    <DataTemplate>
-                                        <Image Width="160" Height="160" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Top" Source="{Binding RecipePhoto}"/>
-                                    </DataTemplate>
-                                </ListBox.ItemTemplate>
-                            </ListBox>
-                        </StackPanel>
-                    </Grid>
-
-                </Grid>
-            </phone:PivotItem>
-
-<!--            ~1~Pivot item two@1@
+			<!--            ~1~Pivot item two@1@
             <phone:PivotItem Header="Title">
                 <Grid x:Name="ContentsContentGrid">
                     <StackPanel Margin="20">
@@ -87,7 +102,10 @@
                     </StackPanel>
                 </Grid>
             </phone:PivotItem>-->
-        </phone:Pivot>
-    </Grid>
+		</phone:Pivot>
+		<Path Data="M864.179,-91.7015" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="0" Margin="864.179,-91.701,-384.179,0" Stretch="Fill" Stroke="Black" UseLayoutRounding="False" VerticalAlignment="Top" Width="0"/>
+        
+		<ProgressBar Height="10" x:Name="ProgressBar" Visibility="Collapsed" Margin="12,0,8,255" IsIndeterminate="True"  VerticalAlignment="Bottom"  />
+	</Grid>
 
 </phone:PhoneApplicationPage>
