--- a/PageCropImage.xaml
+++ b/PageCropImage.xaml
@@ -13,6 +13,15 @@
     mc:Ignorable="d"
     shell:SystemTray.IsVisible="True">
 
+    <phone:PhoneApplicationPage.ApplicationBar>
+        <shell:ApplicationBar>
+            <shell:ApplicationBarIconButton x:Name="btnCrop" IconUri="/Assets/ModernUI/appbar.edit.png" Click="btnCrop_Click" IsEnabled="False" Text="Crop"/>
+            <shell:ApplicationBarIconButton x:Name="btnAccept" IconUri="/Assets/ModernUI/appbar.check.png" Click="btnAccept_Click" IsEnabled="False" Text="Accept"/>
+            <shell:ApplicationBarIconButton x:Name="btnReject" IconUri="/Assets/ModernUI/appbar.cancel.png" Click="btnReject_Click" IsEnabled="False" Text="Reject"/>
+            <shell:ApplicationBarIconButton x:Name="btnHelp" IconUri="/Assets/ModernUI/appbar.question.png" Click="btnHelp_Click" IsEnabled="True" Text="Help"/>
+        </shell:ApplicationBar>
+    </phone:PhoneApplicationPage.ApplicationBar>
+
     <phone:PhoneApplicationPage.Resources>
 
         <!-- Storyboard for color transition effect on the croppping rectangle. -->
@@ -40,7 +49,7 @@
 
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="RECICAM" Style="{StaticResource PhoneTextNormalStyle}"/>
+            <TextBlock Text="{StaticResource ApplicationName}" Style="{StaticResource PhoneTextNormalStyle}"/>
             <TextBlock Text="Crop Image" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
