--- a/PageAddContent.xaml
+++ b/PageAddContent.xaml
@@ -14,94 +14,62 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True" Loaded="PageAddContent_OnLoad">
+	<phone:PhoneApplicationPage.ApplicationBar>
+		<shell:ApplicationBar>
+            <shell:ApplicationBarIconButton IconUri="/Assets/ModernUI/appbar.camera.png" Click="ButtonNewPhoto_Click" IsEnabled="True" Text="New"/>
+            <shell:ApplicationBarIconButton IconUri="/Assets/ModernUI/appbar.check.png" Click="ButtonDone_Click" IsEnabled="True" Text="Done"/>
+		</shell:ApplicationBar>
+	</phone:PhoneApplicationPage.ApplicationBar>
 
     <!--LayoutRoot is the root grid where all page content is placed-->
 	<Grid x:Name="LayoutRoot" Background="Transparent">
 		<!--Pivot Control-->
-		<phone:Pivot Title="ReciCam">
+		<phone:Pivot Title="{StaticResource ApplicationName}" Margin="2,0,-2,0">
 			<!--Pivot item one-->
-			<phone:PivotItem Header="Photos" >
-				<Grid x:Name="PhotosContentGrid" Margin="0,0,0,2">
-
-					<Grid x:Name="PhotosContentPanel" Margin="0,0,48,0" ShowGridLines="True" VerticalAlignment="Top">
-						<Grid.RowDefinitions>
-							<RowDefinition Height="Auto"/>
-							<RowDefinition Height="Auto"/>
-						</Grid.RowDefinitions>
-						<Button x:Name="ButtonAddTitle" HorizontalAlignment="Center" Margin="309,12,0,595" Width="50" Height="50" RenderTransformOrigin="-0.48,1.12" Grid.Column="4" VerticalAlignment="Top">
-							<Button.Foreground>
-								<ImageBrush Stretch="None" ImageSource="/Assets/ModernUI/appbar.add.png"/>
-							</Button.Foreground>
-							<Button.Background>
-								<ImageBrush Stretch="None" ImageSource="/Assets/ModernUI/appbar.base.png"/>
-							</Button.Background>
-						</Button>
-						<TextBox x:Name="TextBoxAddTitle" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Width="324" Background="{StaticResource PhoneTextBoxBrush}" BorderBrush="{StaticResource PhoneTextBoxEditBorderBrush}">
-							<TextBox.DataContext>
-								<Models:RecipeBaseTitle/>
-							</TextBox.DataContext>
-						</TextBox>
-					</Grid>
-					<Grid x:Name="PhotosAddedPanel" Margin="0,0,48,0" ShowGridLines="True" VerticalAlignment="Top" Grid.Row="1">
-						<StackPanel>
-
-							<Image x:Name="ImageTitle" Width="160" Height="160" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Top" Source="{Binding RecipePhoto}"/>
-
-							<ListBox x:Name="ListBoxAddedPhotos" Grid.Column="0">
-								<ListBox.ItemTemplate>
-									<DataTemplate>
-										<Image Width="160" Height="160" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Top" Source="{Binding RecipePhoto}"/>
-									</DataTemplate>
-								</ListBox.ItemTemplate>
-							</ListBox>
-						</StackPanel>
-						<toolkit:ListPicker x:Name="ListBoxPhotos" BorderBrush="{x:Null}" Margin="12,12,12,-485">
-							<toolkit:ListPicker.ItemTemplate>
-								<DataTemplate>
-									<Grid ShowGridLines="False">
-										<Grid.RowDefinitions>
-											<RowDefinition Height="auto" />
-											<RowDefinition />
-											<RowDefinition Height="auto" />
-										</Grid.RowDefinitions>
-										<Grid.ColumnDefinitions>
-											<ColumnDefinition Width="*" />
-											<ColumnDefinition Width="*" />
-										</Grid.ColumnDefinitions>
-										<!--Image for the camera capture.-->
-										<Image Grid.Column="0" Width="160" Height="160" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Top" Source="{Binding Photo}"/>
-
-										<StackPanel Grid.Column="1" Margin="20">
-											<HyperlinkButton Click="ButtonAddTitle_Click" HorizontalAlignment="Left" FontSize="24" Content="Add title.."/>
-											<TextBlock HorizontalAlignment="Left" Style="{StaticResource PhoneTextNormalStyle}">
-												<Run FontSize="12" Text="Find title in photo" />
-											</TextBlock>
-                                            
-                                            <!--TextBlock for status messages. -->
-											<TextBlock FontSize="12" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Left" Height="69" x:Name="textStatus" Text="{Binding CapturedDateTime}" />
-										</StackPanel>
-									</Grid>
-								</DataTemplate>
-							</toolkit:ListPicker.ItemTemplate>
-						</toolkit:ListPicker>
-					</Grid>
+			<phone:PivotItem x:Name="FindTitlePivot" Header="Find title.." >
+				<Grid x:Name="AddTitleGrid" Margin="0,0,0,2">
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto"/>
+						<RowDefinition Height="Auto"/>
+						<RowDefinition Height="Auto"/>
+					</Grid.RowDefinitions>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="Auto"/>
+						<ColumnDefinition Width="Auto"/>
+					</Grid.ColumnDefinitions>
+                    <TextBox x:Name="OcrTitleTextBox" Text="{Binding ConvertedText}" Grid.ColumnSpan="2" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" ToolTipService.ToolTip="Foo" />
+					<Image x:Name="ImageChosenPhoto" HorizontalAlignment="Left" Height="100" Margin="0,0,0,-28" VerticalAlignment="Top" Width="100" Grid.Row="2" Grid.ColumnSpan="2" Visibility="Collapsed"/>
+					<Button x:Name="ButtonChoosePhotoForTitle" Content="Choose photo.." Background="{StaticResource PhoneBackgroundBrush}" RenderTransformOrigin="0.029,0.403" Grid.Row="1" Foreground="{StaticResource PhoneForegroundBrush}" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Click="ButtonChoosePhotoForTitle_Click" Style="{StaticResource OcrTextButton}"/>
 					<!--Show images captured here-->
 
 				</Grid>
 			</phone:PivotItem>
-
-			<!--            ~1~Pivot item two@1@
-            <phone:PivotItem Header="Title">
-                <Grid x:Name="ContentsContentGrid">
-                    <StackPanel Margin="20">
-                        <HyperlinkButton Click="ButtonAddTitle_Click" HorizontalAlignment="Left" FontSize="32">Add title..</HyperlinkButton>
-                        <TextBlock Style="{StaticResource PhoneTextNormalStyle}">
-							<Run FontSize="16" Text="Find title in photo" />
-                        </TextBlock>
-                        <Image Visibility="Collapsed" x:Name="ImageTitle" Width="160" Height="120"  Stretch="Uniform" HorizontalAlignment="Left" VerticalAlignment="Top" Source="{Binding RecipePhoto.Photo, Mode=OneWay}"/>
-                    </StackPanel>
-                </Grid>
-            </phone:PivotItem>-->
+			<phone:PivotItem x:Name="FindIngredientsPitvot" Header="Find description..">
+				<Grid x:Name="FindIngredientsGrid">
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto"/>
+						<RowDefinition Height="Auto"/>
+					</Grid.RowDefinitions>
+					<Button x:Name="ButtonChoosePhotoForIngredients" Content="Choose photo.." Style="{StaticResource OcrTextButton}" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Left" Click="ButtonChoosePhotoForIngredient_Click"/>
+					<ListBox x:Name="ListBoxIngredients" HorizontalAlignment="Left" VerticalAlignment="Top">
+						<ListBox.ItemTemplate>
+							<DataTemplate>
+								<TextBox HorizontalAlignment="Left" Height="38" TextWrapping="Wrap" VerticalAlignment="Top" Width="436" Text="{Binding ConvertedText}" Style="{StaticResource OcrTextBox}"/>	
+							</DataTemplate>
+						</ListBox.ItemTemplate>
+					</ListBox>
+				</Grid>
+			</phone:PivotItem>
+			<phone:PivotItem x:Name="FindDescriptionPivot" Header="Find description..">
+				<Grid x:Name="FindDescriptionGrid">
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto"/>
+						<RowDefinition Height="Auto"/>
+					</Grid.RowDefinitions>
+					<TextBox Text="{Binding ConvertedText}"  x:Name="OcrContentTextBox" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Style="{StaticResource OcrTextBox}"/>
+					<Button x:Name="ButtonChoosePhotoForDescription" Content="Choose photo.." Style="{StaticResource OcrTextButton}" Height="40" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Row="1" Click="ButtonChoosePhotoForContent_Click"/>
+				</Grid>
+			</phone:PivotItem>
 		</phone:Pivot>
 		<Path Data="M864.179,-91.7015" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="0" Margin="864.179,-91.701,-384.179,0" Stretch="Fill" Stroke="Black" UseLayoutRounding="False" VerticalAlignment="Top" Width="0"/>
         
