--- a/App.xaml
+++ b/App.xaml
@@ -1,9 +1,11 @@
-﻿<Application 
-    x:Class="ReciCam.Windows.Phone.App"
+﻿<Application
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"       
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
+    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" mc:Ignorable="d" 
+    x:Class="ReciCam.Windows.Phone.App"
+    >
 
     <!--Application Resources-->
     <Application.Resources>
@@ -11,7 +13,24 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources\Styles.xaml" />
                 <ResourceDictionary Source="Resources\GlobalResources.xaml"/>
+                <ResourceDictionary Source="Resources\TextBoxStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+        	<Style x:Key="TextBoxIngredients" TargetType="TextBox">
+        		<Setter Property="FontSize" Value="16"/>
+        		<Setter Property="FontFamily" Value="Segoe WP SemiLight"/>
+        		<Setter Property="Background" Value="{StaticResource PhoneBackgroundBrush}"/>
+        		<Setter Property="BorderBrush" Value="{StaticResource TransparentBrush}"/>
+        		<Setter Property="CaretBrush" Value="{StaticResource PhoneTextBoxSelectionForegroundBrush}"/>
+        		<Setter Property="Foreground" Value="{StaticResource PhoneTextBoxSelectionForegroundBrush}"/>
+        		<Setter Property="SelectionBackground" Value="{StaticResource PhoneSubtleBrush}"/>
+        		<Setter Property="SelectionForeground" Value="{StaticResource PhoneSubtleBrush}"/>
+        	</Style>
+        	<DataTemplate x:Key="IngredientsItemTemplate">
+                <toolkit:PhoneTextBox TextWrapping="Wrap" Style="{StaticResource OcrContents}" Text="{Binding Text, Mode=TwoWay}" FontSize="16"/>
+        	</DataTemplate>
+        	<DataTemplate x:Key="DescriptionItemTemplate">
+        		<toolkit:PhoneTextBox TextWrapping="Wrap" Style="{StaticResource OcrContents}" Text="{Binding Text, Mode=TwoWay}" FontSize="16"/>
+        	</DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 
